--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.github.alyrow'
-version '1.0'
+version '1.0.1-SNAPSHOT'
 
 repositories {
     jcenter()
@@ -13,7 +13,7 @@ repositories {
 
 dependencies {
     implementation "com.badlogicgames.gdx:gdx:1.9.10"
-    api 'com.github.SquidPony.SquidLib:squidlib-util:v3.0.0'
+    implementation 'com.squidpony:squidlib-util:3.0.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
