--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,8 @@ dependencies {
     implementation "com.badlogicgames.gdx:gdx:1.9.10"
     implementation 'com.squidpony:squidlib-util:3.0.1'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:1.9.10"
+    testImplementation "com.badlogicgames.gdx:gdx-platform:1.9.10:natives-desktop"
+
 }
